Fix tag height
Fixed a height problem on the tag. They were taking too much heigh
and weren't centered.

--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ body {
   }
   .container__user-details-info {
     padding: 2rem;
+    align-items: center;
     flex-direction: row;
   }
   .container__user-details-info-item {
